[package]
name = "redis_exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = [
    "macros",
    "sync",
    "time",
    "fs",
    "process",
    "rt-multi-thread",
] }
redis = { version = "0.32", features = ["tokio-comp"] }
axum = "0.8"
prometheus = "0.14"
serde = { version = "1.0", features = ["derive"] }
envy = "0.4"
